<resources>
    <string name="app_name">virtual_assigment</string>
    <string name="user_name">User Name</string>
    <string name="enter_user_name">enter user name</string>
    <string name="enter_password">enter password</string>
    <string name="password">Password</string>
    <string name="login">login</string>
    <string name="name">Name</string>
    <string name="enter_your_name">enter your name</string>
    <string name="email">Email</string>
    <string name="enter_email">enter email</string>
    <string name="phone">Phone</string>
    <string name="address">Address</string>
    <string name="enter_phone_number">enter phone number</string>
    <string name="enter_address">enter address</string>
    <string name="university_name">University Name</string>
    <string name="enter_university_name">enter university name</string>
    <string name="graduation_year">Graduation Year</string>
    <string name="enter_graduation_year">enter graduation year</string>
    <string name="cgpa">CGPA</string>
    <string name="enter_cgpa">enter cgpa</string>
    <string name="experience_in_month">Experience In Month</string>
    <string name="enter_experience">enter experience</string>
    <string name="current_work_place">Current Work Place</string>
    <string name="enter_current_work_place">enter current work place</string>
    <string name="applying_in">Applying In</string>
    <string name="enter_position">enter position</string>
    <string name="expected_salary">Expected Salary</string>
    <string name="enter_expected_salary">enter expected salary</string>
    <string name="fieldbuzz_reference">FieldBuzz Reference</string>
    <string name="enter_reference">enter reference</string>
    <string name="github_project_url">Github Project Url</string>
    <string name="enter_github_project_url">enter github project url</string>
    <string name="submit">submit</string>
    <string name="please_attach_cv_here">Please attach cv here</string>
    <string name="example_pdf">example.pdf</string>
    <string name="todo">TODO</string>
</resources>