<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.auth.AuthActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/_20sdp">

        <TextView
            android:id="@+id/user_name_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            android:text="@string/user_name"
            android:textColor="@color/colorAccent"
            android:textSize="@dimen/_13ssp"
            android:layout_marginTop="@dimen/_150sdp"
            android:layout_marginStart="@dimen/_5sdp"/>

        <EditText
            android:id="@+id/editTexUserName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/user_name_tv"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginTop="@dimen/_5sdp"
            android:background="@drawable/edit_text_background"
            android:drawablePadding="@dimen/_7sdp"
            android:ems="10"
            android:hint="@string/enter_user_name"
            android:inputType="text"
            android:maxLines="1"
            android:paddingStart="@dimen/_10ssp"
            android:paddingEnd="@dimen/_10ssp"
            android:textColor="@color/textPrimary"
            android:textColorHint="@color/textHint"
            tools:ignore="TextFields"/>
        <TextView
            android:id="@+id/password_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/editTexUserName"
            app:layout_constraintLeft_toLeftOf="parent"
            android:text="@string/password"
            android:textColor="@color/colorAccent"
            android:textSize="@dimen/_13ssp"
            android:layout_marginTop="@dimen/_20sdp"
            android:layout_marginStart="@dimen/_5sdp"/>

        <EditText
            android:id="@+id/editTextPassword"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/password_tv"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginTop="@dimen/_5sdp"
            android:background="@drawable/edit_text_background"
            android:drawablePadding="@dimen/_7sdp"
            android:ems="10"
            android:hint="@string/enter_password"
            android:inputType="textPassword"
            android:maxLines="1"
            android:paddingStart="@dimen/_10ssp"
            android:paddingEnd="@dimen/_10ssp"
            android:textColor="@color/textPrimary"
            android:textColorHint="@color/textHint"
            tools:ignore="TextFields"/>
        <Button
            android:id="@+id/btnLogin"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/_35sdp"
            app:layout_constraintTop_toBottomOf="@id/editTextPassword"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:textColor="@color/textWhite"
            android:text="@string/login"
            android:textAllCaps="true"
            android:textSize="@dimen/_14ssp"
            android:background="@drawable/button_background"
            android:layout_marginTop="@dimen/_25sdp"/>

        <ProgressBar
            android:id="@+id/progressBar"
            android:visibility="gone"
            style="?android:attr/progressBarStyle"
            android:layout_width="@dimen/_40sdp"
            android:layout_height="@dimen/_40sdp"
            android:elevation="@dimen/_8sdp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="@dimen/_50sdp"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
